--- a/v8.ipynb
+++ b/v8.ipynb
@@ -623,7 +623,7 @@
       "source": [
         "df_pivot = evaluate_cross_model_accuracy(models, label_file_path, batch_size, num_workers, device, \"_apd\")\n",
         "\n",
-        "df_pivot.to_csv(\"model_accuracies.csv\")"
+        "df_pivot.to_csv(\"accuracies_apd.csv\")"
       ]
     },
     {
@@ -650,10 +650,334 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Attacking resnet101 with resnet101\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 20.84it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of resnet101: 0.0%\n",
+            "Attacking inception_v3 with resnet101\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 23.08it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v3: 20.9%\n",
+            "Attacking inception_v4 with resnet101\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 17.83it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v4: 19.9%\n",
+            "Attacking adv_inception_v3 with resnet101\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 21.85it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of adv_inception_v3: 39.9%\n",
+            "Attacking inception_resnet_v2 with resnet101\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 14.33it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_resnet_v2: 4.3%\n",
+            "Attacking resnet101 with inception_v3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 15.12it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of resnet101: 37.6%\n",
+            "Attacking inception_v3 with inception_v3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 25.77it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v3: 0.0%\n",
+            "Attacking inception_v4 with inception_v3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 18.31it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v4: 15.7%\n",
+            "Attacking adv_inception_v3 with inception_v3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 22.03it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of adv_inception_v3: 39.5%\n",
+            "Attacking inception_resnet_v2 with inception_v3\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 15.74it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_resnet_v2: 0.1%\n",
+            "Attacking resnet101 with inception_v4\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 14.89it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of resnet101: 41.2%\n",
+            "Attacking inception_v3 with inception_v4\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 25.27it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v3: 14.6%\n",
+            "Attacking inception_v4 with inception_v4\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 18.58it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v4: 0.0%\n",
+            "Attacking adv_inception_v3 with inception_v4\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 21.36it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of adv_inception_v3: 40.6%\n",
+            "Attacking inception_resnet_v2 with inception_v4\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 15.05it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_resnet_v2: 0.2%\n",
+            "Attacking resnet101 with inception_resnet_v2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 15.39it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of resnet101: 52.7%\n",
+            "Attacking inception_v3 with inception_resnet_v2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 24.38it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v3: 27.9%\n",
+            "Attacking inception_v4 with inception_resnet_v2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 18.61it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_v4: 29.3%\n",
+            "Attacking adv_inception_v3 with inception_resnet_v2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:01<00:00, 21.95it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of adv_inception_v3: 42.9%\n",
+            "Attacking inception_resnet_v2 with inception_resnet_v2\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Evaluating: 100%|██████████| 42/42 [00:02<00:00, 14.71it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy of inception_resnet_v2: 0.0%\n",
+            "Target Model         adv_inception_v3  inception_resnet_v2  inception_v3  \\\n",
+            "Base Model                                                                 \n",
+            "inception_resnet_v2              42.9                  0.0          27.9   \n",
+            "inception_v3                     39.5                  0.1           0.0   \n",
+            "inception_v4                     40.6                  0.2          14.6   \n",
+            "resnet101                        39.9                  4.3          20.9   \n",
+            "\n",
+            "Target Model         inception_v4  resnet101  \n",
+            "Base Model                                    \n",
+            "inception_resnet_v2          29.3       52.7  \n",
+            "inception_v3                 15.7       37.6  \n",
+            "inception_v4                  0.0       41.2  \n",
+            "resnet101                    19.9        0.0  \n"
+          ]
+        }
+      ],
+      "source": [
+        "df_pivot = evaluate_cross_model_accuracy(models, label_file_path, batch_size, num_workers, device, \"_mfgsm\")\n",
+        "\n",
+        "df_pivot.to_csv(\"accuracies_mfgsm.csv\")"
+      ]
     },
     {
       "cell_type": "markdown",
